--- a/docker/config/default.testnet.yaml
+++ b/docker/config/default.testnet.yaml
@@ -4,26 +4,26 @@ Web:
 
 Client:
   appName: 01cnode
-  apiUrlStart: "/api/bitcoind"
-  pageName: "my bitcoin fullnode"
+  apiUrlStart: "/api/groestlcoind"
+  pageName: "my groestlcoin fullnode"
 
 RPC:
   host: 172.17.0.1
-  port: 18332
+  port: 17766
   rpc_username: secretuser
   rpc_password: secretpass
   concurrency: 100
 
 Zmq:
-  socket: "tcp://172.17.0.1:28332"
+  socket: "tcp://172.17.0.1:21441"
   events:
     - "hashblock"
     - "hashtx"
     - "rawblock"
     - "rawtx"
-    
-Bitcoin:
-  homeDir: '/bitcoin'
+
+Groestlcoin:
+  homeDir: '/groestlcoin'
 
 Api:
   restCalls:
