--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "angular": "^1.7.2",
     "angular-socket-io": "^0.7.0",
     "async-work-queue": "^0.3.0",
-    "groestlcoinjs-lib": "https://github.com/Groestlcoin/groestlcoinjs-lib.git",
+    "groestlcoinjs-lib": "^4.0.2",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "buffer": "^5.1.0",
